# modapp-tools

./: .flake8  .gitignore  README.md  lint.sh  pyproject.toml  setup.cfg
modapp_tools/: cli.py  cst.py  env.py  strutils.py  visitor.py
modapp_tools/code_generators/: js_cst.py  modapp_back.py  web_service.py
modapp_tools/protobuf_parser/: ast.py  parser.py  protobuf3.lark
modapp_tools/tools/: _fix_protos_js.py  _regenerate_py.py  _watch_server.py  create_package.py  link_all.py  regenerate_protos.py  test_run.py  watch.py
tests/code_generators/: fixtures.py  test_modapp_back.py  test_web_service.py
tests/protobuf_parser/: addressbook.proto  test_parser.py
vapi_tools/: cli.py  cst.py  visitor.py
vapi_tools/code_generators/: js_cst.py  web_service.py
vapi_tools/protobuf_parser/: ast.py  parser.py  protobuf3.lark
