[tool.poetry]
name = "vapi-tools"
version = "0.1.0"
description = ""
authors = ["Vladyslav Hnatiuk <vladyslav5@meta.ua>"]
license = "MIT"
readme = "README.md"
packages = [{include = "vapi_tools"}]

[tool.poetry.dependencies]
python = "^3.8"
lark = "^1.1.2"
loguru = "^0.6.0"
typer = "^0.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
nitpick = "^0.32.0"

[tool.nitpick]
style = "../nitpick-style/nitpick-style.toml"
