[tool.poetry]
name = "modapp_tools"
version = "0.3.0"
description = ""
authors = ["Vladyslav Hnatiuk <vladyslav5@meta.ua>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
lark = "^1.1.2"
loguru = "^0.6.0"
typer = {extras = ["all"], version = "^0.6.1"}
libcst = "^0.4.7"
pytomlpp = "^1.0.11"
command-runner = "^1.4.0"
watchfiles = "^0.18.1"
grpclib = "^0.4.2"
grpcio-tools = "^1.60.0"
protobuf = "^4.21.6"
modapp_cst = { git = "https://github.com/Aksem/modapp-cst.git", tag = "v0.1.2" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
nitpick = "^0.32.0"
black = "^22.3"
pytest-cov = "^2.12.1"
pytest-mock = "^3.7.0"
isort = "^5.9.3"
mypy = "^0.910"
flake8 = "^3.9.2"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.0"
flake8-bugbear = "^21.4.3"
flake8-comprehensions = "^3.6.1"
bandit = "^1.7.0"
safety = "^1.10.3"

[tool.nitpick]
style = "https://raw.githubusercontent.com/Aksem/nitpick-style/1.0/nitpick-style.toml"

[tool.black]
target-version = ["py38", "py39", "py310"]
--preview = "yes"
exclude = "(\n    asv_bench/env\n  | \\.egg\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.nox\n  | \\.tox\n  | \\.venv\n  | _build\n  | buck-out\n  | build\n  | dist\n  | setup.py\n)\n"

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.1.0b2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
modapp_tools_cli = "modapp_tools.cli:app"
